crates/core/src/parser.rs
use crate::selector::{
    AttributeMatcher, AttributeSelector, AttributeValue, ClassSelector, Combinator,
    ComplexSelector, ComplexSelectorComponent, ComplexSelectorUnit, CompoundSelector,
    ForgivingSelectorList, IdSelector, NamespaceName, NamespacePrefix, PseudoClassArguments,
    PseudoClassSelector, PseudoCompoundSelector, PseudoElementArguments, PseudoElementSelector,
    QualifiedName, RelativeSelector, RelativeSelectorList, SelectorList, SelectorParser,
    SubclassSelector, TypeSelector,
};
use crate::token::{Token, TokenKind};
use crate::types::LexerSpan;

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct TokenData {
    pub kind:               TokenKind,
    pub line:               usize,
    pub span:               LexerSpan,
}

impl From<&Token> for TokenData {
    fn from(token: &Token) -> Self {
        Self {
            kind: token.kind.clone(),
            line: token.line,
            span: token.span,
        }
    }
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct Stylesheet {
    pub rule_list:              Vec<Rule>,
}

#[rustfmt::skip]
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum Rule {
    AT_RULE(AtRule),
    QUALIFIED_RULE(QualifiedRule),
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct AtRule {
    pub name:               TokenData,
    pub prelude:            Vec<ComponentValue>,
    pub block:              Option<SimpleBlock>,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct QualifiedRule {
    pub prelude:            Vec<ComponentValue>,
    pub selectors:          SelectorList,
    pub block:              Option<StyleBlock>,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct Declaration {
    pub name:               TokenData,
    pub value:              Vec<ComponentValue>,
    pub important:          bool,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct StyleBlock {
    pub opening:            TokenData,
    pub items:              Vec<StyleBlockItem>,
    pub closing:            Option<TokenData>,
}

#[rustfmt::skip]
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum StyleBlockItem {
    DECLARATION(Declaration),
    AT_RULE(AtRule),
}

#[rustfmt::skip]
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ComponentValue {
    PRESERVED(TokenData),
    SIMPLE_BLOCK(SimpleBlock),
    FUNCTION(Function),
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct SimpleBlock {
    pub opening:            TokenData,
    pub values:             Vec<ComponentValue>,
    pub closing:            Option<TokenData>,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct Function {
    pub name:           TokenData,
    pub values:         Vec<ComponentValue>,
    pub closing:        Option<TokenData>,
}

pub trait Visitor {
    fn visit_stylesheet(&mut self, stylesheet: &Stylesheet) {
        walk_stylesheet(self, stylesheet);
    }

    fn visit_rule(&mut self, rule: &Rule) {
        walk_rule(self, rule);
    }

    fn visit_at_rule(&mut self, at_rule: &AtRule) {
        walk_at_rule(self, at_rule);
    }

    fn visit_qualified_rule(&mut self, rule: &QualifiedRule) {
        walk_qualified_rule(self, rule);
    }

    fn visit_style_block(&mut self, block: &StyleBlock) {
        walk_style_block(self, block);
    }

    fn visit_style_block_item(&mut self, item: &StyleBlockItem) {
        walk_style_block_item(self, item);
    }

    fn visit_declaration(&mut self, declaration: &Declaration) {
        walk_declaration(self, declaration);
    }

    fn visit_component_value(&mut self, value: &ComponentValue) {
        walk_component_value(self, value);
    }

    fn visit_simple_block(&mut self, block: &SimpleBlock) {
        walk_simple_block(self, block);
    }

    fn visit_function(&mut self, function: &Function) {
        walk_function(self, function);
    }

    fn visit_selector_list(&mut self, selectors: &SelectorList) {
        walk_selector_list(self, selectors);
    }

    fn visit_relative_selector_list(&mut self, selectors: &RelativeSelectorList) {
        walk_relative_selector_list(self, selectors);
    }

    fn visit_forgiving_selector_list(&mut self, selectors: &ForgivingSelectorList) {
        walk_forgiving_selector_list(self, selectors);
    }

    fn visit_relative_selector(&mut self, selector: &RelativeSelector) {
        walk_relative_selector(self, selector);
    }

    fn visit_complex_selector(&mut self, selector: &ComplexSelector) {
        walk_complex_selector(self, selector);
    }

    fn visit_complex_selector_component(&mut self, component: &ComplexSelectorComponent) {
        walk_complex_selector_component(self, component);
    }

    fn visit_complex_selector_unit(&mut self, unit: &ComplexSelectorUnit) {
        walk_complex_selector_unit(self, unit);
    }

    fn visit_compound_selector(&mut self, selector: &CompoundSelector) {
        walk_compound_selector(self, selector);
    }

    fn visit_combinator(&mut self, combinator: &Combinator) {
        walk_combinator(self, combinator);
    }

    fn visit_type_selector(&mut self, selector: &TypeSelector) {
        walk_type_selector(self, selector);
    }

    fn visit_qualified_name(&mut self, name: &QualifiedName) {
        walk_qualified_name(self, name);
    }

    fn visit_namespace_prefix(&mut self, prefix: &NamespacePrefix) {
        walk_namespace_prefix(self, prefix);
    }

    fn visit_namespace_name(&mut self, name: &NamespaceName) {
        walk_namespace_name(self, name);
    }

    fn visit_subclass_selector(&mut self, selector: &SubclassSelector) {
        walk_subclass_selector(self, selector);
    }

    fn visit_id_selector(&mut self, selector: &IdSelector) {
        walk_id_selector(self, selector);
    }

    fn visit_class_selector(&mut self, selector: &ClassSelector) {
        walk_class_selector(self, selector);
    }

    fn visit_attribute_selector(&mut self, selector: &AttributeSelector) {
        walk_attribute_selector(self, selector);
    }

    fn visit_attribute_matcher(&mut self, matcher: &AttributeMatcher) {
        walk_attribute_matcher(self, matcher);
    }

    fn visit_attribute_value(&mut self, value: &AttributeValue) {
        walk_attribute_value(self, value);
    }

    fn visit_pseudo_class_selector(&mut self, selector: &PseudoClassSelector) {
        walk_pseudo_class_selector(self, selector);
    }

    fn visit_pseudo_class_arguments(&mut self, arguments: &PseudoClassArguments) {
        walk_pseudo_class_arguments(self, arguments);
    }

    fn visit_pseudo_compound_selector(&mut self, selector: &PseudoCompoundSelector) {
        walk_pseudo_compound_selector(self, selector);
    }

    fn visit_pseudo_element_selector(&mut self, selector: &PseudoElementSelector) {
        walk_pseudo_element_selector(self, selector);
    }

    fn visit_pseudo_element_arguments(&mut self, arguments: &PseudoElementArguments) {
        walk_pseudo_element_arguments(self, arguments);
    }

    fn visit_selector_token(&mut self, _token: &TokenData) {}

    fn visit_token(&mut self, _token: &TokenData) {}
}

pub fn walk_stylesheet<V: Visitor + ?Sized>(visitor: &mut V, stylesheet: &Stylesheet) {
    for rule in &stylesheet.rule_list {
        visitor.visit_rule(rule);
    }
}

pub fn walk_rule<V: Visitor + ?Sized>(visitor: &mut V, rule: &Rule) {
    match rule {
        Rule::AT_RULE(at_rule) => visitor.visit_at_rule(at_rule),
        Rule::QUALIFIED_RULE(rule) => visitor.visit_qualified_rule(rule),
    }
}

pub fn walk_at_rule<V: Visitor + ?Sized>(visitor: &mut V, at_rule: &AtRule) {
    visitor.visit_token(&at_rule.name);
    for value in &at_rule.prelude {
        visitor.visit_component_value(value);
    }
    if let Some(block) = &at_rule.block {
        visitor.visit_simple_block(block);
    }
}

pub fn walk_qualified_rule<V: Visitor + ?Sized>(visitor: &mut V, rule: &QualifiedRule) {
    visitor.visit_selector_list(&rule.selectors);
    for value in &rule.prelude {
        visitor.visit_component_value(value);
    }
    if let Some(block) = &rule.block {
        visitor.visit_style_block(block);
    }
}

pub fn walk_selector_list<V: Visitor + ?Sized>(visitor: &mut V, selectors: &SelectorList) {
    for selector in &selectors.selectors {
        visitor.visit_complex_selector(selector);
    }
}

pub fn walk_relative_selector_list<V: Visitor + ?Sized>(
    visitor: &mut V,
    selectors: &RelativeSelectorList,
) {
    for selector in &selectors.selectors {
        visitor.visit_relative_selector(selector);
    }
}

pub fn walk_forgiving_selector_list<V: Visitor + ?Sized>(
    visitor: &mut V,
    selectors: &ForgivingSelectorList,
) {
    for selector in &selectors.selectors {
        visitor.visit_complex_selector(selector);
    }
}

pub fn walk_relative_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &RelativeSelector) {
    visitor.visit_complex_selector(&selector.selector);
}

pub fn walk_complex_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &ComplexSelector) {
    for component in &selector.components {
        visitor.visit_complex_selector_component(component);
    }
}

pub fn walk_complex_selector_component<V: Visitor + ?Sized>(
    visitor: &mut V,
    component: &ComplexSelectorComponent,
) {
    if let Some(combinator) = &component.combinator {
        visitor.visit_combinator(combinator);
    }
    visitor.visit_complex_selector_unit(&component.unit);
}

pub fn walk_complex_selector_unit<V: Visitor + ?Sized>(
    visitor: &mut V,
    unit: &ComplexSelectorUnit,
) {
    if let Some(compound) = &unit.compound {
        visitor.visit_compound_selector(compound);
    }
    for pseudo_compound in &unit.pseudo_compounds {
        visitor.visit_pseudo_compound_selector(pseudo_compound);
    }
}

pub fn walk_compound_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &CompoundSelector) {
    if let Some(type_selector) = &selector.type_selector {
        visitor.visit_type_selector(type_selector);
    }
    for subclass_selector in &selector.subclass_selectors {
        visitor.visit_subclass_selector(subclass_selector);
    }
}

pub fn walk_combinator<V: Visitor + ?Sized>(visitor: &mut V, combinator: &Combinator) {
    match combinator {
        Combinator::DESCENDANT(token)
        | Combinator::CHILD(token)
        | Combinator::NEXT_SIBLING(token)
        | Combinator::SUBSEQUENT_SIBLING(token) => visitor.visit_selector_token(token),
        Combinator::COLUMN(first, second) => {
            visitor.visit_selector_token(first);
            visitor.visit_selector_token(second);
        }
    }
}

pub fn walk_type_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &TypeSelector) {
    match selector {
        TypeSelector::QUALIFIED_NAME(name) => visitor.visit_qualified_name(name),
        TypeSelector::UNIVERSAL { namespace, star } => {
            if let Some(namespace) = namespace {
                visitor.visit_namespace_prefix(namespace);
            }
            visitor.visit_selector_token(star);
        }
    }
}

pub fn walk_qualified_name<V: Visitor + ?Sized>(visitor: &mut V, name: &QualifiedName) {
    if let Some(namespace) = &name.namespace {
        visitor.visit_namespace_prefix(namespace);
    }
    visitor.visit_selector_token(&name.name);
}

pub fn walk_namespace_prefix<V: Visitor + ?Sized>(visitor: &mut V, prefix: &NamespacePrefix) {
    if let Some(name) = &prefix.prefix {
        visitor.visit_namespace_name(name);
    }
    visitor.visit_selector_token(&prefix.separator);
}

pub fn walk_namespace_name<V: Visitor + ?Sized>(visitor: &mut V, name: &NamespaceName) {
    match name {
        NamespaceName::IDENT(token) | NamespaceName::STAR(token) => {
            visitor.visit_selector_token(token)
        }
    }
}

pub fn walk_subclass_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &SubclassSelector) {
    match selector {
        SubclassSelector::ID(selector) => visitor.visit_id_selector(selector),
        SubclassSelector::CLASS(selector) => visitor.visit_class_selector(selector),
        SubclassSelector::ATTRIBUTE(selector) => visitor.visit_attribute_selector(selector),
        SubclassSelector::PSEUDO_CLASS(selector) => visitor.visit_pseudo_class_selector(selector),
    }
}

pub fn walk_id_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &IdSelector) {
    visitor.visit_selector_token(&selector.hash);
}

pub fn walk_class_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &ClassSelector) {
    visitor.visit_selector_token(&selector.dot);
    visitor.visit_selector_token(&selector.name);
}

pub fn walk_attribute_selector<V: Visitor + ?Sized>(visitor: &mut V, selector: &AttributeSelector) {
    visitor.visit_selector_token(&selector.opening);
    visitor.visit_qualified_name(&selector.name);
    if let Some(matcher) = &selector.matcher {
        visitor.visit_attribute_matcher(matcher);
    }
    if let Some(value) = &selector.value {
        visitor.visit_attribute_value(value);
    }
    if let Some(modifier) = &selector.modifier {
        visitor.visit_selector_token(modifier);
    }
    visitor.visit_selector_token(&selector.closing);
}

pub fn walk_attribute_matcher<V: Visitor + ?Sized>(visitor: &mut V, matcher: &AttributeMatcher) {
    if let Some(operator) = &matcher.operator {
        visitor.visit_selector_token(operator);
    }
    visitor.visit_selector_token(&matcher.equals);
}

pub fn walk_attribute_value<V: Visitor + ?Sized>(visitor: &mut V, value: &AttributeValue) {
    match value {
        AttributeValue::STRING(token) | AttributeValue::IDENT(token) => {
            visitor.visit_selector_token(token)
        }
    }
}

pub fn walk_pseudo_class_selector<V: Visitor + ?Sized>(
    visitor: &mut V,
    selector: &PseudoClassSelector,
) {
    visitor.visit_selector_token(&selector.colon);
    visitor.visit_selector_token(&selector.name);
    if let Some(arguments) = &selector.arguments {
        visitor.visit_pseudo_class_arguments(arguments);
    }
}

pub fn walk_pseudo_class_arguments<V: Visitor + ?Sized>(
    visitor: &mut V,
    arguments: &PseudoClassArguments,
) {
    for value in &arguments.values {
        visitor.visit_component_value(value);
    }
    visitor.visit_selector_token(&arguments.closing);
}

pub fn walk_pseudo_compound_selector<V: Visitor + ?Sized>(
    visitor: &mut V,
    selector: &PseudoCompoundSelector,
) {
    visitor.visit_pseudo_element_selector(&selector.pseudo_element);
    for pseudo_class in &selector.pseudo_classes {
        visitor.visit_pseudo_class_selector(pseudo_class);
    }
}

pub fn walk_pseudo_element_selector<V: Visitor + ?Sized>(
    visitor: &mut V,
    selector: &PseudoElementSelector,
) {
    visitor.visit_selector_token(&selector.first_colon);
    if let Some(second_colon) = &selector.second_colon {
        visitor.visit_selector_token(second_colon);
    }
    visitor.visit_selector_token(&selector.name);
    if let Some(arguments) = &selector.arguments {
        visitor.visit_pseudo_element_arguments(arguments);
    }
}

pub fn walk_pseudo_element_arguments<V: Visitor + ?Sized>(
    visitor: &mut V,
    arguments: &PseudoElementArguments,
) {
    for value in &arguments.values {
        visitor.visit_component_value(value);
    }
    visitor.visit_selector_token(&arguments.closing);
}

pub fn walk_style_block<V: Visitor + ?Sized>(visitor: &mut V, block: &StyleBlock) {
    visitor.visit_token(&block.opening);
    for item in &block.items {
        visitor.visit_style_block_item(item);
    }
    if let Some(closing) = &block.closing {
        visitor.visit_token(closing);
    }
}

pub fn walk_style_block_item<V: Visitor + ?Sized>(visitor: &mut V, item: &StyleBlockItem) {
    match item {
        StyleBlockItem::DECLARATION(declaration) => visitor.visit_declaration(declaration),
        StyleBlockItem::AT_RULE(at_rule) => visitor.visit_at_rule(at_rule),
    }
}

pub fn walk_declaration<V: Visitor + ?Sized>(visitor: &mut V, declaration: &Declaration) {
    visitor.visit_token(&declaration.name);
    for value in &declaration.value {
        visitor.visit_component_value(value);
    }
}

pub fn walk_component_value<V: Visitor + ?Sized>(visitor: &mut V, value: &ComponentValue) {
    match value {
        ComponentValue::PRESERVED(token) => visitor.visit_token(token),
        ComponentValue::SIMPLE_BLOCK(block) => visitor.visit_simple_block(block),
        ComponentValue::FUNCTION(function) => visitor.visit_function(function),
    }
}

pub fn walk_simple_block<V: Visitor + ?Sized>(visitor: &mut V, block: &SimpleBlock) {
    visitor.visit_token(&block.opening);
    for value in &block.values {
        visitor.visit_component_value(value);
    }
    if let Some(closing) = &block.closing {
        visitor.visit_token(closing);
    }
}

pub fn walk_function<V: Visitor + ?Sized>(visitor: &mut V, function: &Function) {
    visitor.visit_token(&function.name);
    for value in &function.values {
        visitor.visit_component_value(value);
    }
    if let Some(closing) = &function.closing {
        visitor.visit_token(closing);
    }
}

/// Renders a stylesheet AST as an indented tree.
#[rustfmt::skip]
#[derive(Debug, Default)]
pub struct AstPrinter {
    output:             String,
    depth:              usize,
}

impl AstPrinter {
    pub fn new() -> Self {
        Self::default()
    }

    pub fn render(stylesheet: &Stylesheet) -> String {
        let mut printer = Self::new();
        printer.visit_stylesheet(stylesheet);
        printer.output
    }

    pub fn as_str(&self) -> &str {
        &self.output
    }

    fn enter(&mut self, label: impl std::fmt::Display) {
        use std::fmt::Write;

        let _ = writeln!(self.output, "{}(__ {label}", "  ".repeat(self.depth));
        self.depth += 1;
    }

    fn leave(&mut self) {
        self.depth -= 1;
    }
}

impl Visitor for AstPrinter {
    fn visit_stylesheet(&mut self, stylesheet: &Stylesheet) {
        self.output.push_str("Stylesheet\n");
        self.depth += 1;
        walk_stylesheet(self, stylesheet);
        self.depth -= 1;
    }

    fn visit_rule(&mut self, rule: &Rule) {
        let label = match rule {
            Rule::AT_RULE(_) => "Rule::AT_RULE",
            Rule::QUALIFIED_RULE(_) => "Rule::QUALIFIED_RULE",
        };
        self.enter(label);
        walk_rule(self, rule);
        self.leave();
    }

    fn visit_at_rule(&mut self, at_rule: &AtRule) {
        self.enter("AtRule");
        walk_at_rule(self, at_rule);
        self.leave();
    }

    fn visit_qualified_rule(&mut self, rule: &QualifiedRule) {
        self.enter("QualifiedRule");
        walk_qualified_rule(self, rule);
        self.leave();
    }

    fn visit_selector_list(&mut self, selectors: &SelectorList) {
        self.enter("SelectorList");
        walk_selector_list(self, selectors);
        self.leave();
    }

    fn visit_relative_selector_list(&mut self, selectors: &RelativeSelectorList) {
        self.enter("RelativeSelectorList");
        walk_relative_selector_list(self, selectors);
        self.leave();
    }

    fn visit_forgiving_selector_list(&mut self, selectors: &ForgivingSelectorList) {
        self.enter("ForgivingSelectorList");
        walk_forgiving_selector_list(self, selectors);
        self.leave();
    }

    fn visit_relative_selector(&mut self, selector: &RelativeSelector) {
        self.enter("RelativeSelector");
        walk_relative_selector(self, selector);
        self.leave();
    }

    fn visit_complex_selector(&mut self, selector: &ComplexSelector) {
        self.enter("ComplexSelector");
        walk_complex_selector(self, selector);
        self.leave();
    }

    fn visit_complex_selector_component(&mut self, component: &ComplexSelectorComponent) {
        self.enter("ComplexSelectorComponent");
        walk_complex_selector_component(self, component);
        self.leave();
    }

    fn visit_complex_selector_unit(&mut self, unit: &ComplexSelectorUnit) {
        self.enter("ComplexSelectorUnit");
        walk_complex_selector_unit(self, unit);
        self.leave();
    }

    fn visit_compound_selector(&mut self, selector: &CompoundSelector) {
        self.enter("CompoundSelector");
        walk_compound_selector(self, selector);
        self.leave();
    }

    fn visit_combinator(&mut self, combinator: &Combinator) {
        self.enter(format!("Combinator::{:?}", combinator));
        walk_combinator(self, combinator);
        self.leave();
    }

    fn visit_type_selector(&mut self, selector: &TypeSelector) {
        self.enter(format!("TypeSelector::{:?}", selector));
        walk_type_selector(self, selector);
        self.leave();
    }

    fn visit_qualified_name(&mut self, name: &QualifiedName) {
        self.enter("QualifiedName");
        walk_qualified_name(self, name);
        self.leave();
    }

    fn visit_namespace_prefix(&mut self, prefix: &NamespacePrefix) {
        self.enter("NamespacePrefix");
        walk_namespace_prefix(self, prefix);
        self.leave();
    }

    fn visit_namespace_name(&mut self, name: &NamespaceName) {
        self.enter(format!("NamespaceName::{:?}", name));
        walk_namespace_name(self, name);
        self.leave();
    }

    fn visit_subclass_selector(&mut self, selector: &SubclassSelector) {
        self.enter(format!("SubclassSelector::{:?}", selector));
        walk_subclass_selector(self, selector);
        self.leave();
    }

    fn visit_id_selector(&mut self, selector: &IdSelector) {
        self.enter("IdSelector");
        walk_id_selector(self, selector);
        self.leave();
    }

    fn visit_class_selector(&mut self, selector: &ClassSelector) {
        self.enter("ClassSelector");
        walk_class_selector(self, selector);
        self.leave();
    }

    fn visit_attribute_selector(&mut self, selector: &AttributeSelector) {
        self.enter("AttributeSelector");
        walk_attribute_selector(self, selector);
        self.leave();
    }

    fn visit_attribute_matcher(&mut self, matcher: &AttributeMatcher) {
        self.enter("AttributeMatcher");
        walk_attribute_matcher(self, matcher);
        self.leave();
    }

    fn visit_attribute_value(&mut self, value: &AttributeValue) {
        self.enter(format!("AttributeValue::{:?}", value));
        walk_attribute_value(self, value);
        self.leave();
    }

    fn visit_pseudo_class_selector(&mut self, selector: &PseudoClassSelector) {
        self.enter("PseudoClassSelector");
        walk_pseudo_class_selector(self, selector);
        self.leave();
    }

    fn visit_pseudo_class_arguments(&mut self, arguments: &PseudoClassArguments) {
        self.enter("PseudoClassArguments");
        walk_pseudo_class_arguments(self, arguments);
        self.leave();
    }

    fn visit_pseudo_compound_selector(&mut self, selector: &PseudoCompoundSelector) {
        self.enter("PseudoCompoundSelector");
        walk_pseudo_compound_selector(self, selector);
        self.leave();
    }

    fn visit_pseudo_element_selector(&mut self, selector: &PseudoElementSelector) {
        self.enter("PseudoElementSelector");
        walk_pseudo_element_selector(self, selector);
        self.leave();
    }

    fn visit_pseudo_element_arguments(&mut self, arguments: &PseudoElementArguments) {
        self.enter("PseudoElementArguments");
        walk_pseudo_element_arguments(self, arguments);
        self.leave();
    }

    fn visit_selector_token(&mut self, token: &TokenData) {
        self.enter(format!("SelectorToken::{:?}", token.kind));
        self.leave();
    }

    fn visit_style_block(&mut self, block: &StyleBlock) {
        self.enter("StyleBlock");
        walk_style_block(self, block);
        self.leave();
    }

    fn visit_style_block_item(&mut self, item: &StyleBlockItem) {
        let label = match item {
            StyleBlockItem::DECLARATION(_) => "StyleBlockItem::DECLARATION",
            StyleBlockItem::AT_RULE(_) => "StyleBlockItem::AT_RULE",
        };
        self.enter(label);
        walk_style_block_item(self, item);
        self.leave();
    }

    fn visit_declaration(&mut self, declaration: &Declaration) {
        self.enter(format!("Declaration (important={})", declaration.important));
        walk_declaration(self, declaration);
        self.leave();
    }

    fn visit_component_value(&mut self, value: &ComponentValue) {
        let label = match value {
            ComponentValue::PRESERVED(_) => "ComponentValue::PRESERVED",
            ComponentValue::SIMPLE_BLOCK(_) => "ComponentValue::SIMPLE_BLOCK",
            ComponentValue::FUNCTION(_) => "ComponentValue::FUNCTION",
        };
        self.enter(label);
        walk_component_value(self, value);
        self.leave();
    }

    fn visit_simple_block(&mut self, block: &SimpleBlock) {
        self.enter(format!("SimpleBlock ({:?})", block.opening.kind));
        walk_simple_block(self, block);
        self.leave();
    }

    fn visit_function(&mut self, function: &Function) {
        self.enter("Function");
        walk_function(self, function);
        self.leave();
    }

    fn visit_token(&mut self, token: &TokenData) {
        self.enter(format!(
            "Token::{:?} (line={}, span={:?})",
            token.kind, token.line, token.span
        ));
        self.leave();
    }
}

#[rustfmt::skip]
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ParseErrorReason {
    UNEXPECTED_TOKEN,
    UNEXPECTED_EOF,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct ParseError {
    pub reason:             ParseErrorReason,
    pub line:               usize,
    pub span:               LexerSpan,
}

#[rustfmt::skip]
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct ParseResult<T> {
    pub             value: T,
    pub             errors: Vec<ParseError>,
}

#[rustfmt::skip]
pub struct Parser<'a> {
    tokens:             &'a [Token],
    current:            usize,
    errors:             Vec<ParseError>,
}

#[rustfmt::skip]
#[derive(Debug, Clone, Copy)]
struct RecoveryCheckpoint {
    token_index:                usize,
    error_index:                usize,
}

impl<'a> Parser<'a> {
    pub fn new(tokens: &'a [Token]) -> Self {
        Self {
            tokens,
            current: 0,
            errors: Vec::new(),
        }
    }

    pub fn parse_stylesheet(&mut self) -> ParseResult<Stylesheet> {
        let mut rule_list = Vec::new();

        while !self.check(TokenKind::EOF) {
            if self.match_kind(TokenKind::WHITESPACE) {
                continue;
            }

            let rule = if self.check(TokenKind::AT_KEYWORD) {
                self.parse_at_rule().map(Rule::AT_RULE)
            } else {
                self.parse_qualified_rule().map(Rule::QUALIFIED_RULE)
            };

            if let Some(rule) = rule {
                rule_list.push(rule);
            }
        }

        ParseResult {
            value: Stylesheet { rule_list },
            errors: std::mem::take(&mut self.errors),
        }
    }

    pub fn parse_declaration_list(&mut self) -> ParseResult<Vec<Declaration>> {
        let mut declarations = Vec::new();

        loop {
            while self.match_kind(TokenKind::WHITESPACE) || self.match_kind(TokenKind::SEMICOLON) {}

            if matches!(
                self.peek_kind(),
                Some(TokenKind::EOF | TokenKind::CURLY_CLOSE) | None
            ) {
                break;
            }

            if self.check(TokenKind::IDENT) {
                if let Some(declaration) = self.parse_declaration() {
                    declarations.push(declaration);
                }
            } else {
                self.error(ParseErrorReason::UNEXPECTED_TOKEN);
                self.synchronize_declaration();
            }
        }

        ParseResult {
            value: declarations,
            errors: std::mem::take(&mut self.errors),
        }
    }

    fn parse_at_rule(&mut self) -> Option<AtRule> {
        let name = self.expect_consume(TokenKind::AT_KEYWORD)?;
        let mut prelude = Vec::new();

        loop {
            if self.check(TokenKind::SEMICOLON) {
                self.consume();

                return Some(AtRule {
                    name,
                    prelude,
                    block: None,
                });
            }
            if self.check(TokenKind::CURLY_OPEN) {
                return Some(AtRule {
                    name,
                    prelude,
                    block: self.parse_simple_block(),
                });
            }
            if self.check(TokenKind::EOF) {
                return Some(AtRule {
                    name,
                    prelude,
                    block: None,
                });
            }

            if let Some(value) = self.parse_component_value() {
                prelude.push(value);
            }
        }
    }

    fn parse_qualified_rule(&mut self) -> Option<QualifiedRule> {
        let checkpoint = self.checkpoint();
        let mut prelude = Vec::new();

        loop {
            if self.check(TokenKind::CURLY_OPEN) {
                let selectors = self.parse_qualified_rule_selectors(&prelude);
                return Some(QualifiedRule {
                    prelude,
                    selectors,
                    block: self.parse_style_block(),
                });
            }
            if self.check(TokenKind::EOF) {
                self.error_if_clean(checkpoint, ParseErrorReason::UNEXPECTED_EOF);
                let selectors = self.parse_qualified_rule_selectors(&prelude);

                return Some(QualifiedRule {
                    prelude,
                    selectors,
                    block: None,
                });
            }

            if let Some(value) = self.parse_component_value() {
                prelude.push(value);
            }
        }
    }

    fn parse_qualified_rule_selectors(&mut self, prelude: &[ComponentValue]) -> SelectorList {
        let result = SelectorParser::new(prelude).parse_selector_list();
        self.errors.extend(result.errors);
        result.value
    }

    fn parse_style_block(&mut self) -> Option<StyleBlock> {
        let opening = self.consume()?;
        let checkpoint = self.checkpoint();
        let mut items = Vec::new();

        loop {
            while self.match_kind(TokenKind::WHITESPACE) || self.match_kind(TokenKind::SEMICOLON) {}

            match self.peek_kind() {
                Some(TokenKind::CURLY_CLOSE) => {
                    let closing = self.consume();
                    return Some(StyleBlock {
                        opening,
                        items,
                        closing,
                    });
                }
                Some(TokenKind::EOF) | None => {
                    self.error_if_clean(checkpoint, ParseErrorReason::UNEXPECTED_EOF);
                    return Some(StyleBlock {
                        opening,
                        items,
                        closing: None,
                    });
                }
                Some(TokenKind::AT_KEYWORD) => {
                    if let Some(rule) = self.parse_at_rule() {
                        items.push(StyleBlockItem::AT_RULE(rule));
                    }
                }
                Some(TokenKind::IDENT) => {
                    if let Some(declaration) = self.parse_declaration() {
                        items.push(StyleBlockItem::DECLARATION(declaration));
                    }
                }
                Some(_) => {
                    self.error(ParseErrorReason::UNEXPECTED_TOKEN);
                    self.synchronize_style_block();
                }
            }
        }
    }

    fn parse_declaration(&mut self) -> Option<Declaration> {
        let name = self.consume()?;

        while self.match_kind(TokenKind::WHITESPACE) {}

        if !self.match_kind(TokenKind::COLON) {
            self.error(ParseErrorReason::UNEXPECTED_TOKEN);
            self.synchronize_declaration();
            return None;
        }

        let mut value = Vec::new();

        while !matches!(
            self.peek_kind(),
            Some(TokenKind::SEMICOLON | TokenKind::EOF | TokenKind::CURLY_CLOSE) | None
        ) {
            if let Some(component) = self.parse_component_value() {
                value.push(component);
            }
        }

        let mut value_end = value.len();

        while matches!(
            value.get(value_end.saturating_sub(1)),
            Some(ComponentValue::PRESERVED(TokenData {
                kind: TokenKind::WHITESPACE,
                ..
            }))
        ) {
            value_end -= 1;
        }

        let important_index = (value_end > 0).then(|| value_end - 1).filter(|index| {
            matches!(
                value.get(*index),
                Some(ComponentValue::PRESERVED(TokenData {
                    kind: TokenKind::IMPORTANT_TOKEN,
                    ..
                }))
            )
        });

        let important = important_index.is_some();

        if let Some(index) = important_index {
            value.remove(index);
            while matches!(
                value.last(),
                Some(ComponentValue::PRESERVED(TokenData {
                    kind: TokenKind::WHITESPACE,
                    ..
                }))
            ) {
                value.pop();
            }
        }

        self.match_kind(TokenKind::SEMICOLON);

        Some(Declaration {
            name,
            value,
            important,
        })
    }

    fn synchronize_declaration(&mut self) {
        self.synchronize_to(&[TokenKind::SEMICOLON, TokenKind::EOF, TokenKind::CURLY_CLOSE]);

        self.match_kind(TokenKind::SEMICOLON);
    }

    fn synchronize_style_block(&mut self) {
        self.synchronize_to(&[TokenKind::SEMICOLON, TokenKind::CURLY_CLOSE, TokenKind::EOF]);
        self.match_kind(TokenKind::SEMICOLON);
    }

    fn checkpoint(&self) -> RecoveryCheckpoint {
        RecoveryCheckpoint {
            token_index: self.current,
            error_index: self.errors.len(),
        }
    }

    fn error_if_clean(&mut self, checkpoint: RecoveryCheckpoint, reason: ParseErrorReason) {
        if self.current >= checkpoint.token_index && self.errors.len() == checkpoint.error_index {
            self.error(reason);
        }
    }
